apps/media/jackett/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
  labels:
    app: jackett
  annotations:
    backup.velero.io/backup-volumes: config
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett:version-v0.17.838
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9117
          name: jackett
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "300Mi"
            cpu: 1
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-pvc-jackett
