apps/media/jackett/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  ports:
  - name: jackett
    targetPort: jackett
    port: 9117
  selector:
    app: jackett
